<?xml version="1.0" encoding="utf-8"?><!--Lifesup_sprint_1_112018-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <include
        android:id="@+id/header"
        layout="@layout/header" />

    <!--<ImageView style="@style/Img_Loading" />-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/ll_proceed"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="#F26522">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_reverse_number_artwork" />

            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="4dp"
                android:text="@string/label_reserve_number_digit"
                android:textColor="@color/black_alpha40" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginLeft="36dp"
                android:layout_marginTop="@dimen/dimen10dp"
                android:layout_marginRight="36dp">

                <ImageView
                    style="@style/Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_reverse_number_location"
                    android:visibility="visible" />

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_marginLeft="4dp"
                    android:layout_height="@dimen/edittext_height"
                    android:layout_weight="1">

                    <EditText
                        style="@style/NapTheCao_InputPhoneNo2"
                        android:imeOptions="actionDone"
                        android:inputType="phone"
                        android:textSize="16sp" />

                    <ImageView
                        android:layout_width="26dp"
                        android:layout_height="26dp"
                        android:layout_alignParentRight="true"
                        android:src="@drawable/ic_close_round"
                        android:visibility="gone" />

                </RelativeLayout>

            </TableRow>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:text="@string/label_reserve_number_note"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <Button
                style="@style/BaseStyle_ButtonOK2"
                android:layout_width="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/label_reserve_number_submit" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:gravity="center"
                    android:text="@string/label_reserve_number_select"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="4dp"
                    android:background="@color/orange" />

                <GridView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:columnWidth="120dp"
                    android:gravity="center"
                    android:numColumns="2" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_proceed"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:animateLayoutChanges="true"
            android:background="@color/gray_06"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="12dp"
            android:paddingTop="6dp"
            android:paddingRight="12dp"
            android:paddingBottom="6dp"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/label_reserve_number_select_number_label"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/label_reserve_number_select_price_label"
                    android:textColor="@color/orange"
                    android:textSize="14sp"
                    tools:text="090909090909" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_weight="5"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/label_reserve_number_select_price_label"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/label_reserve_number_select_price_label"
                    android:textColor="@color/orange"
                    android:textSize="14sp"
                    tools:text="090909090909" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <Button
                    style="@style/BaseStyle_ButtonOK2"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/label_reserve_number_proceed" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>